--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,11 @@
 name: Build and Deploy to DigitalOcean
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
+      
 
 env:
   IMAGE_NAME: email-sender-app
