Implemented rate-limit

--- a/.env-example
+++ b/.env-example
@@ -4,3 +4,7 @@ EMAIL_PASS=your-password-smtp
 SMTP_HOST=smtp.your-email-provider.com
 SMTP_PORT=587
 SMTP_SECURE=false
+
+# Rate limit (optional): max requests per window; window in ms
+RATE_LIMIT_MAX=10
+RATE_LIMIT_WINDOW_MS=60000
