--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "nodemailer": "^7.0.12",
     "zod": "^4.3.5"
   },
