--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "nodemailer": "^7.0.12",
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
     "@types/nodemailer": "^7.0.5",
