--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,28 +36,15 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           printf '%s\n' "${{ secrets.DROPLET_SSH_KEY }}" > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/authorized_keys
 
       - name: Deploy to Droplet via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key_path: ~/.ssh/deploy_key
+          key_path: ~/.ssh/authorized_keys
           port: ${{ secrets.DROPLET_SSH_PORT || 22 }}
           script: |
             docker login registry.digitalocean.com -u oauth2 -p ${{ secrets.DO_ACCESS_TOKEN }}
-            docker pull ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            docker stop ${{ env.IMAGE_NAME }} || true
-            docker rm ${{ env.IMAGE_NAME }} || true
-            docker run -d \
-              --name ${{ env.IMAGE_NAME }} \
-              -p 3001:3001 \
-              --restart always \
-              -e PORT=${{ secrets.PORT }} \
-              -e EMAIL_USER=${{ secrets.EMAIL_USER }} \
-              -e EMAIL_PASS=${{ secrets.EMAIL_PASS }} \
-              -e SMTP_HOST=${{ secrets.SMTP_HOST }} \
-              -e SMTP_PORT=${{ secrets.SMTP_PORT }} \
-              -e SMTP_SECURE=${{ secrets.SMTP_SECURE }} \
-              ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            docker ps -a
