--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,13 +31,31 @@ jobs:
       - name: Push Docker image
         run: |
           docker push ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
       - name: Deploy to Droplet via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
           key: ${{ secrets.DROPLET_SSH_KEY }}
-          port: ${{ secrets.DROPLET_SSH_PORT || 22 }}
           script: |
-            docker login registry.digitalocean.com -u oauth2 -p ${{ secrets.DO_ACCESS_TOKEN }}
-            docker ps -a
+            docker login registry.digitalocean.com \
+              -u oauth2 \
+              -p ${{ secrets.DO_ACCESS_TOKEN }}
+
+            docker pull ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+            docker stop ${{ env.IMAGE_NAME }} || true
+            docker rm ${{ env.IMAGE_NAME }} || true
+
+            docker run -d \
+              --name ${{ env.IMAGE_NAME }} \
+              -p 3001:3001 \
+              --restart always \
+              -e PORT=${{ secrets.PORT }} \
+              -e EMAIL_USER=${{ secrets.EMAIL_USER }} \
+              -e EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} \
+              -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} \
+              -e SMTP_PORT=${{ secrets.SMTP_PORT }} \
+              -e SMTP_SECURE=${{ secrets.SMTP_SECURE }} \
+              ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
