--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,7 +55,7 @@ jobs:
               -e PORT=${{ secrets.PORT }} \
               -e EMAIL_USER=${{ secrets.EMAIL_USER }} \
               -e EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} \
-              -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} \
+              -e SMTP_HOST=${{ secrets.SMTP_SERVER }} \
               -e SMTP_PORT=${{ secrets.SMTP_PORT }} \
               -e SMTP_SECURE=${{ secrets.SMTP_SECURE }} \
               ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
