--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec tsx src/server.ts",
-    "build": "tsc",
+    "build": "tsc && node -e \"const fs=require('fs'); fs.readdirSync('src/templates').filter(f=>f.endsWith('.hbs')).forEach(f=>fs.copyFileSync('src/templates/'+f,'dist/templates/'+f))\"",
     "start": "node dist/server.js"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "handlebars": "^4.7.8",
     "nodemailer": "^7.0.12",
     "zod": "^4.3.5"
   },
