--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ env:
   IMAGE_NAME: email-sender-app
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,11 +32,16 @@ jobs:
         run: |
           docker push ${{ secrets.DO_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to Droplet via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
+
           key: ${{ secrets.DROPLET_SSH_KEY }}
           script: |
             docker login registry.digitalocean.com \
